--- a/exam.ipynb
+++ b/exam.ipynb
@@ -24,6 +24,8 @@
         }
       ],
       "source": [
+        "#test gosoft data\n",
+        "\n",
         "!pwd\n",
         "%cd PatchMixer\n",
         "!python -V\n",
